--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>AR Project with A-Frame</title>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Realidad Aumentada con A-Frame</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://aframe.io/releases/1.2.0/aframe-ar.js"></script>
+    <script src="https://aframe.io/releases/1.2.0/aframe-ar.min.js"></script>
     <style>
-      body {
-        margin: 0;
-        overflow: hidden;
-      }
-      a-scene {
-        width: 100vw;
-        height: 100vh;
-      }
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
+        #ar-container {
+            width: 100%;
+            height: 100vh; /* Asegúrate de que ocupa todo el alto de la pantalla */
+        }
     </style>
-  </head>
-  <body>
-    <a-scene embedded arjs='sourceType: webcam;'>
-      <a-marker preset="hiro">
-        <a-box position='0 0.5 0' material='color: yellow;'></a-box>
-      </a-marker>
-      <a-entity camera></a-entity>
+</head>
+<body>
+    <a-scene embedded arjs>
+        <a-marker preset="hiro">
+            <a-box position='0 0.5 0' material='color: red;'></a-box>
+        </a-marker>
+        <a-entity camera></a-entity>
     </a-scene>
-  </body>
+</body>
 </html>
